--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,4 +40,4 @@ jobs:
         run: pip list
       - name: python run
         shell: bash -el {0}
-        run: python test_finufft_plan.py
+        run: python test.py
